--- a/changes.txt
+++ b/changes.txt
@@ -1,3 +1,4 @@
+<h1>Release Notes for 4.2.0-139</h1>
 <h2>Release Notes for 4.2.0-139</h2>
 <p>This is a maintenance release for the Secure Spaces client software.</p>
 <ul>
