--- a/changes.txt
+++ b/changes.txt
@@ -1,18 +1,16 @@
-<h1>Release Notes for 4.2.0-139</h1>
-<h2>Release Notes for 4.2.0-139</h2>
-<p>This is a maintenance release for the Secure Spaces client software.</p>
-<ul>
-  <li>Password Recovery integrated</li>
-  <li>Consolidated number of APK files (9 to 4)</li>
-  <li>Spaces settings deletes user data on user debug builds</li>
-  <li>Improved More Spaces</li>
-  <li>Improved Spaces sharing to non-active Spaces</li>
-  <li>Self-contained Spaces Bug Fix</li>
-  <li>Improved Secure Spaces Over the Air (OTA) updates checking</li>
-</ul>
-<hr/>
-<p>
+=Release Notes for 4.2.0-139
+This is a maintenance release for the Secure Spaces client software.
+
+* Password Recovery integrated
+* Consolidated number of APK files (9 to 4)
+* Spaces settings deletes user data on user debug builds
+* Improved More Spaces
+* Improved Spaces sharing to non-active Spaces
+* Self-contained Spaces Bug Fix
+* Improved Secure Spaces Over the Air (OTA) updates checking
+
+
   Notice:
   Due to changes in our Launcher app, this OTA update may reset your Home Screen shortcuts and wallpaper.  
   Your apps and data are not affected.
-</p>
+
