--- a/changes.txt
+++ b/changes.txt
@@ -1,6 +1,4 @@
-===========================
-Release Notes for 4.2.0-139
-===========================
+==Release Notes for 4.2.0-139
 This is a maintenance release for the Secure Spaces client software.
 
 * Password Recovery integrated
@@ -11,10 +9,9 @@ This is a maintenance release for the Secure Spaces client software.
 * Self-contained Spaces Bug Fix
 * Improved Secure Spaces Over the Air (OTA) updates checking
 
-
-===================
-Notice:
-====================
+====Notice:
+```
 Due to changes in our Launcher app, this OTA update may reset your Home Screen shortcuts and wallpaper.  
 Your apps and data are not affected.
+```
 
