--- a/changes.txt
+++ b/changes.txt
@@ -1,5 +1,5 @@
-## Release Notes for 4.2.0-139
-_This is a maintenance release for the Secure Spaces client software._
+Release Notes for 4.2.0-139
+This is a maintenance release for the Secure Spaces client software.
 
 * Password Recovery integrated
 * Consolidated number of APK files (9 to 4)
